--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,38 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="platinum">#EDECED</color>
+    <color name="silver">#c3baba</color>
+    <color name="dark_grey">#9a8f97</color>
+    <color name="dark_pink">#932A6E</color>
+    <color name="brown">#694a38</color>
+    <color name="splash_status_bar_color">#F7F4E1</color>
+    <color name="red">#A81010</color>
+    <color name="extra_light_pink">#DAB4CD</color>
+    <color name="light_grey">#D3D3D3</color>
+    <color name="light_green">#8BC34A</color>
+    <color name="light_blue">#03A9F4</color>
+    <color name="light_yellow">#FFEB3B</color>
+    <color name="light_red">#FF5722</color>
+    <color name="light_orange">#FF9800</color>
+    <color name="light_purple">#9C27B0</color>
+    <color name="light_teal">#009688</color>
+    <color name="light_pink">#E91E63</color>
+    <color name="light_brown">#795548</color>
+    <color name="light_deep_orange">#FF5722</color>
+    <color name="light_cyan">#00BCD4</color>
+    <color name="light_amber">#FFC107</color>
+    <color name="light_lime">#CDDC39</color>
+    <color name="light_deep_purple">#673AB7</color>
+    <color name="light_indigo">#3F51B5</color>
+    <color name="light_blue_grey">#607D8B</color>
+    <color name="light_blue_grey_50">#ECEFF1</color>
+    <color name="light_blue_grey_100">#CFD8DC</color>
+    <color name="light_blue_grey_200">#B0BEC5</color>
+    <color name="light_blue_grey_300">#90A4AE</color>
+    <color name="light_blue_grey_400">#78909C</color>
+    <color name="light_blue_grey_500">#607D8B</color>
+    <color name="light_blue_grey_600">#546E7A</color>
+    <color name="light_blue_grey_700">#455A64</color>
 </resources>
