--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,23 +7,22 @@
 
     <fragment
         android:id="@+id/fragment_Home"
-        android:name="com.sksinha2410.studymasalaa.Fragments.Fragment_Home"
+        android:name="com.sksinha2410.classmate.Fragments.HomeFragment"
         android:label="fragment__home"
-        tools:layout="@layout/fragment__home" />
+        tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/fragment_update"
-        android:name="com.sksinha2410.studymasalaa.Fragments.Fragment_update"
+        android:name="com.sksinha2410.classmate.Fragments.UpdatesFragment"
         android:label="fragment_live_events"
-        tools:layout="@layout/fragment_update" />
+        tools:layout="@layout/fragment_updates" />
     <fragment
         android:id="@+id/fragment_book"
-        android:name="com.sksinha2410.studymasalaa.Fragments.fragment_book"
+        android:name="com.sksinha2410.classmate.Fragments.BooksFragment"
         android:label="fragment_frament_feed"
-        tools:layout="@layout/fragment_book" />
+        tools:layout="@layout/fragment_books" />
     <fragment
         android:id="@+id/fragment_resource"
-        android:name="com.sksinha2410.studymasalaa.Fragments.Fragment_Resource"
+        android:name="com.sksinha2410.classmate.Fragments.ResourceFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_resource" />
-
 </navigation>
