--- a/app/src/main/res/color/bottom_nav_icon_color.xml
+++ b/app/src/main/res/color/bottom_nav_icon_color.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:color="@color/white" android:state_checked="true"/>
-    <item android:color="@color/silver"/>
+    <item android:color="#343434"/>
 </selector>
