--- a/app/src/main/res/color/bottom_nav_text_color.xml
+++ b/app/src/main/res/color/bottom_nav_text_color.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:color="@color/white" android:state_checked="false"/>
-    <item android:color="#BB5A2B"/>
+    <item android:color="#000000"/>
 </selector>
