--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
                 android:text="@string/classmate"
                 android:shadowColor="#A4000000"
                 android:shadowRadius="1"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 android:layout_marginStart="30dp"
                 android:fontFamily="@font/londrina_solid"
@@ -45,6 +46,7 @@
                 android:text="@string/classmate"
                 android:shadowColor="#B9903DC5"
                 android:shadowRadius="1"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 android:layout_marginStart="30dp"
                 android:fontFamily="@font/londrina_outline"
@@ -67,9 +69,8 @@
                 android:layout_height="50dp"
                 android:layout_centerInParent="true"
                 android:layout_gravity="end"
-                android:background="@drawable/circle_back"
                 android:padding="10dp"
-                android:src="@drawable/home" />
+                android:src="@drawable/chatbot" />
         </RelativeLayout>
 
 
@@ -95,7 +96,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="#555555"
+        android:background="#3381C5"
         app:menu="@menu/bottom_nav_menu"
         app:itemIconTint="@color/bottom_nav_icon_color"
         app:itemTextColor="@color/bottom_nav_text_color"
