--- a/app/src/main/res/layout/fragment_books.xml
+++ b/app/src/main/res/layout/fragment_books.xml
@@ -26,13 +26,11 @@
             android:layout_below="@+id/batchName"
             android:layout_marginHorizontal="@dimen/_10sdp"
             android:layout_marginVertical="5dp"
-
             android:background="@color/black"
             android:backgroundTint="#00303030"
             app:cardCornerRadius="@dimen/_15ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -55,6 +53,18 @@
 
         </androidx.cardview.widget.CardView>
 
-
+        <ImageView
+            android:id="@+id/add"
+            android:layout_width="45dp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="end"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/circle_back"
+            android:padding="@dimen/_14sdp"
+            android:src="@drawable/plus"
+            android:visibility="gone" />
     </RelativeLayout>
 </FrameLayout>
