--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
     </style>
 
     <style name="Theme.ClassMate" parent="Base.Theme.ClassMate" />
+
     <style name="CustomDropDownItemStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
         <item name="android:background">@color/white</item>
     </style>
@@ -21,4 +22,7 @@
     <style name="bottomNavigationView">
         <item name="colorSecondaryContainer">@color/extra_light_pink</item>
     </style>
+
+    <style name="Theme.Geminichat" parent="android:Theme.Material.Light.NoActionBar" />
+
 </resources>
