--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -1,10 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.AddBookActivity">
+    tools:context=".Activities.AddBookActivity"
+    android:background="@color/white"
+    android:orientation="vertical">
+    <ImageView
+        android:id="@+id/ivBack"
+        android:layout_width="33dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="48dp"
+        android:src="@drawable/back_btn"
+        app:tint="#5400E8" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Book"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:layout_marginTop="26dp"
+        android:layout_marginStart="20dp"
+        android:textColor="@color/black"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/uploadIMG"
+        android:layout_marginTop="22dp"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:src="@drawable/upload"
+        android:layout_gravity="center"/>
+
+    <EditText
+        android:id="@+id/etBookName"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:autofillHints="Name"
+        android:layout_marginHorizontal="22dp"
+        android:background="@drawable/sign_corner"
+        android:paddingHorizontal="8dp"
+        android:layout_marginTop="26dp"
+        android:textColor="#414141"
+        android:textColorHint="#8E8E8E"
+        android:textSize="20sp"
+        android:hint="Book Name"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/etBookUrl"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@drawable/sign_corner"
+        android:paddingHorizontal="8dp"
+        android:layout_marginHorizontal="22dp"
+        android:layout_marginTop="20dp"
+        android:textColor="#414141"
+        android:textSize="20sp"
+        android:hint="Book Link"
+        android:textColorHint="#8E8E8E" />
+
+    <Button
+        android:id="@+id/btnUpload"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginHorizontal="22dp"
+        android:text="UPLOAD"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:background="@drawable/sign_btn"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/white"/>
+
+</LinearLayout>
